@@ -1,3 +1,8 @@
+2005-08-27	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-bar.c, exo/exo-icon-view.c: Use alloca wrappers
+	  provided by GLib.
+
 2005-08-26	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c(exo_icon_view_expose_event): No need to setup
